@startuml EditCommandClassDiagram
hide circle
skinparam classAttributeIconSize 0

abstract class Command {
	+execute(...) : void
}

class EditCommand {
	-oneBasedIndex : int
	-fieldName : String
	-newValue : String
	+execute(...) : void
}

class WorkoutList {
	+getSize() : int
	+getWorkoutAtIndex(index : int) : Workout
	+getWorkouts() : List<Workout>
}

abstract class Workout {
	+setDescription(description : String) : void
}

class StrengthWorkout {
	+setWeight(weight : double) : void
	+setSets(sets : int) : void
	+setReps(reps : int) : void
}

class RunWorkout {
	+setDistance(distance : double) : void
	+setDurationMinutes(durationMinutes : double) : void
}

class Storage {
	+saveData(...) : boolean
}

class Ui {
	+showMessage(message : String) : void
	+showError(message : String) : void
}

class Parser {
	+validateNoStorageDelimiters(value : String, fieldName : String) : void
}

class UserProfile

Command <|-- EditCommand
Workout <|-- StrengthWorkout
Workout <|-- RunWorkout
WorkoutList --> "*" Workout

EditCommand ..> WorkoutList
EditCommand ..> Storage
EditCommand ..> Ui
EditCommand ..> UserProfile
EditCommand ..> Workout
EditCommand ..> StrengthWorkout
EditCommand ..> RunWorkout
EditCommand ..> Parser
@enduml
